<resources>
    <string name="app_name">E-Paliwko</string>


    <!-- Dodawanie samochodu -->
    <string name="dodaj_marka">Marka samochodu</string>
    <string name="dodaj_model">Model samochodu</string>
    <string name="dodaj_spalanie">Srednie spalanie na 100km</string>
    <string name="button_dodaj">Dodaj</string>
    <string name="text_dodaj_samochod">Dodaj samochod:</string>

    <!-- Dodawanie tankowania -->
    <string name="text_dodaj_tankowanie">Dodaj tankowanie:</string>
    <string name="dodaj_litry">Zatankowane litry</string>
    <string name="dodaj_cena">cena za litr</string>
    <string name="dodaj_data">data tankowania</string>

    <!-- okno glowne -->
    <string name="wybierz_samochod">Wybierz samochód:</string>
    <string name="wybierz_samochod_usun">Wybierz samochód, który chcesz usunąć:</string>

    <!-- Szczegoly tankowan -->
    <string name="text_szczegoly_tankowan">Szczegóły tankowań:</string>

    <!-- szczegoly samochodu -->
    <string name="text_statystyki">Statystyki Ogólne</string>
    <string name="text_koszty">Calkowite koszty:</string>
    <string name="text_srednia_cena">Srednia cena paliwa:</string>
    <string name="text_ogolne_litry">Zatankowane litry łącznie:</string>
    <string name="text_calkowite_km">Całkowita liczba km:</string>
    <string name="text_liczba_tankowan">Liczba tankowań:</string>
    <string name="button_dodaj_tankowanie">Dodaj tankowanie</string>
    <string name="button_szczegoly_tankowan">Szczegóły tankowań</string>


    <string name="text_usuwanie_samochodu">Wybierz samochod, który chcesz usunąć:</string>


</resources>
