<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_szczegoly_samochodu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tlo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.milek.paliwomierz.SzczegolySamochodu">

    <Button
        android:text="@string/button_dodaj_tankowanie"
        style="@style/styl_button"
        android:textSize="10dp"
        android:backgroundTint="@color/kolor_buttona"
        android:layout_height="50dp"
        android:id="@+id/buttonDodajTankowanie"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_szczegoly_tankowan"
        style="@style/styl_button"
        android:textSize="10dp"
        android:backgroundTint="@color/kolor_buttona"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonTankowania" />

    <TextView
        android:text="@string/text_statystyki"
        style="@style/naglowki"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/text_koszty"
        style="@style/zwykly_tekst"

        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView3" />

    <TextView
        android:text=""
        style="@style/zwykly_tekst"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textViewkoszty" />

    <TextView
        android:text="@string/text_srednia_cena"
        style="@style/zwykly_tekst"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/text_ogolne_litry"
        style="@style/zwykly_tekst"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView7" />

    <TextView
        android:text=""
        style="@style/zwykly_tekst"
        android:id="@+id/textViewLitryZat"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/text_calkowite_km"
        style="@style/zwykly_tekst"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView13" />

    <TextView
        android:text="@string/text_liczba_tankowan"
        style="@style/zwykly_tekst"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView11" />

    <TextView
        android:text=""
        style="@style/zwykly_tekst"
        android:id="@+id/textViewKm"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text=""
        style="@style/zwykly_tekst"
        android:id="@+id/textViewLiczbaTan"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text=""
        style="@style/zwykly_tekst"
        android:id="@+id/textViewSredniaCena"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
